[feat] 增加监管功能
--story==2172204202311152053
